# prediction_backend

./: dnn_model.py  pyproject.toml  rerquest.py  run.py
app/: main.py
app/api/routes/: annotation.py  root.py
app/assets/: model.h5  neuralnetwork_model_Video-14-36-46-42.h5
app/core/: settings.py
app/ml/: teaching.py
app/ml/models/: annotation.py
app/models/schema/: label.py
