[tool.poetry]
name = "prediction_backend"
version = "0.1.0"
description = ""
authors = ["EvgenySkywalker <zhek26rus@google.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.12.1"
fastapi = "^0.61.1"
requests = "^2.24.0"
python-multipart = "^0.0.5"
pip = "^20.2.3"
pandas = "^1.1.3"
joblib = "^0.17.0"
tensorflow = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
